<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carmen Day Spa</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="services">Services</string>
    <string name="contact">Contact</string>
    <string name="booking">Booking</string>
    <string name="directions">Directions</string>
    <string name="products">Products</string>
    <string name="about">About Us</string>
    <string name="footerText">www.carmendayspa.ca</string>
    <string name="aboutCarmen">At Carmen’s Day Spa we are committed to ensuring complete customer satisfaction with our
        services and products. We offer a full range of spa services to help you look and feel better!\n\nCarmen is a
        licensed esthetician with twenty-two years of experience. Her success is based on providing the highest quality
        services and professional skin care products.\n\nWe are pleased to offer only the highest quality products
        including Dr. Renaud, NK Brown, Gehwol, Dr. Biodroga, OPI and Footlogix.</string>
    <string name="btnMore">More</string>
    <string name="contactTitle">Contact Carmen</string>
    <string name="contactFirstName">First Name</string>
    <string name="contactLastName">Last Name</string>
    <string name="feedback">Comments/Feedback</string>
    <string name="bookingTitle">Book Appointment</string>
    <string name="bookingFirstName">First Name</string>
    <string name="bookingLastName">Last Name</string>
    <string name="requestedService">Requested Service</string>
    <string name="customerEmail">E-mail</string>
    <string name="customerPhone">Phone #</string>
    <string name="additionalComments">Comments</string>
    <string name="bookButton">Submit</string>
    <string name="title_activity_single_product">SingleProduct</string>
    <string name="product">Product</string>
    <string name="submit">Submit</string>
    <string name="quantity">Select Quantity</string>
    <string name="out_of_stock">Out Of Stock\nPlease check back soon</string>
    <string name="servicesBody">Back Facial $90\nBody wraps $90\nAroma Body Wrap $90\nMilk &amp; Honey Bodywrap $90\nAnti-Cellulite Wrap $90\nDetoxifying Celulite Treatment $90\nSpa Body Polish $90\nReflexology $49</string>
    <string name="servicesBodyTitle">For Your Body</string>
    <string name="servicesFace">Carmen’s Signature Facial $89 – 75 min\nDeluxe Facial $99 – 75 min\nTeen Facial $75 – 60 min\nGycolic Acid Peel $45 – 30 min</string>
    <string name="servicesFaceTitle">For Your Face</string>
    <string name="servicesHandsFeet">Spa Manicure &amp; Arm Massage $32\nSpa Pedicure &amp; Leg Massage $42\nSpa Manicure &amp; Pedicure $65\nFrench tip Manicure $37\nParaffin treatment Add $20</string>
    <string name="servicesHandsFeetTitle">For Your Hands &amp; Feet</string>
    <string name="servicesHairRemoval">Brazilian$45\nadd Half Leg – $$$\nadd Full Leg – $$$\n\nBikini or Underarm – $20\nadd Half Leg – $$$\nadd Full Leg – $$$\n\nHalf leg – $28\n\nFull leg wax – $50\nFull Arms – $25\nUnderarms – $25\nBrows, Lips &amp; Chin – $25\nBrows (Wax or Tweeze) – $15\nUpper lip or chin – $12\nFacial Sides – $20</string>
    <string name="servicesHairRemovalTitle">Hair Removal</string>
    <string name="servicesSpecialTouches">Eyelash Extension – $60\nBeautifying Eye Treatment – $25\nEar Piercing – $15\nEar Candling – $45\nDay or Evening makeup – $40\nBridal Makeup – $50\nBody Bronzing Air Mist Tanning – Face and Neck – $35\nBody Bronzing Air Mist Tanning – Full Body – $50</string>
    <string name="servicesSpecialTouchesTitle">Special Touches</string>

</resources>