<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView02"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- form controls here -->

        <TextView
            android:id="@+id/tvContactTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contactTitle"
            android:textSize="10pt" >
        </TextView>

        <EditText
            android:id="@+id/etContactFirst"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactFirstName"
            android:inputType="textPersonName" >
        </EditText>
        
          <EditText
            android:id="@+id/etContactLast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contactLastName"
            android:inputType="textPersonName" >
        </EditText>
   
         <Spinner
            android:id="@+id/spnFeedbackType"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/feedbackType" 
            android:entries="@array/feedbackTypeList">
        </Spinner>
         <EditText
            android:id="@+id/etFeedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feedback"
            android:inputType="textMultiLine" >
        </EditText>
    </LinearLayout>

</ScrollView>